02-cluster/samples/ingress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      nodePort: 30001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-express-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "eks-express-ingress"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-discovery: "true"
    external-dns.alpha.kubernetes.io/hostname: <ALTERAR VALOR>
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - <ALTERAR VALOR>
  rules:
  - host: <ALTERAR VALOR>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80


#https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
#https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.1/guide/ingress/cert_discovery/
#https://github.com/kubernetes-sigs/external-dns/tree/master
